...
    "Noble Ledger · Gurufuri v0.0.4.66" : {

    },
    "OK" : {

    },
    "アカウント" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Account"
...
            "state" : "translated",
            "value" : "Closed"
          }
        }
      }
    },
    "場所・アクセス" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Location & access"
...
